--- a/src/App.scss
+++ b/src/App.scss
@@ -9,13 +9,16 @@ body {
   }
 }
 
-.app {
-  z-index: -100;
-  height: 100vh;
+* {
+  color: white;
+}
+
+body {
+  /* height: 100vh;
   animation: zoominoutsinglefeatured 100s infinite;
   width: 100%;
-  height: 100%;
-  .app__background {
+  height: 100%; */
+  .app {
     height: 100vh;
     background-image: url(./assets/images/background.jpg);
     background-position: center;
