--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -7,3 +7,7 @@ $grey: #111111;
 
 /* Shadow */
 $dropShadow: drop-shadow(2px 4px 15px rgb(0, 0, 0));
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
+$default: 'Poppins', sans-serif;
