--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body {
   width: 100%;
   height: 100%; */
   .app {
-    height: 100vh;
+    height: 100%;
     background-image: url(./assets/images/background.jpg);
     background-position: center;
     background-repeat: repeat;
