--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -1,3 +1,26 @@
+@import '../../utilities/variables';
+
 .item {
-  max-width: 300px;
+  width: 50%;
+  height: auto;
+  margin-bottom: 0.4rem;
+  .img-fluid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid $grey;
+    box-shadow: $dropShadow;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .item {
+    width: 33%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .item {
+    width: 25%;
+  }
 }
