--- a/src/App.scss
+++ b/src/App.scss
@@ -9,22 +9,20 @@ body {
   }
 }
 
+body {
+  height: 100vh;
+}
+
 * {
   color: white;
 }
 
-body {
-  /* height: 100vh;
-  animation: zoominoutsinglefeatured 100s infinite;
-  width: 100%;
-  height: 100%; */
-  .app {
-    height: 100%;
-    background-image: url(./assets/images/background.jpg);
-    background-position: center;
-    background-repeat: repeat;
-    background-size: contain;
-  }
+#root {
+  height: 100%;
+  background-image: url(./assets/images/background.jpg);
+  background-position: center;
+  background-repeat: repeat;
+  background-size: contain;
 }
 
 @keyframes zoominoutsinglefeatured {
@@ -38,3 +36,8 @@ body {
     transform: scale(1, 1);
   }
 }
+
+/* height: 100vh;
+  animation: zoominoutsinglefeatured 100s infinite;
+  width: 100%;
+  height: 100%; */
