search results by inputvalue done

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   &::-webkit-scrollbar {
-    display: hidden;
+    display: none;
     width: 0;
     height: 0;
   }
