--- a/src/pages/ItemPage/ItemPage.scss
+++ b/src/pages/ItemPage/ItemPage.scss
@@ -1,3 +1,62 @@
+@import '../../utilities/variables';
+
 .itemPage {
-  height: 100vh;
+  height: 100%;
+  font-family: $default;
+  .container {
+    margin-top: 2rem;
+    .row {
+      display: flex;
+      flex-direction: column;
+      h1 {
+        font-size: 1rem;
+      }
+      .img-fluid {
+        width: auto;
+        height: auto;
+        object-fit: cover;
+      }
+      .itemPage__content {
+        display: flex;
+        flex-direction: column;
+        .download,
+        .back,
+        p {
+          color: $white;
+          text-decoration: none;
+          font-size: 14px;
+          font-weight: 400;
+          margin-top: 1rem;
+        }
+        .download {
+          padding: 0.2rem 0.6rem;
+          max-width: fit-content;
+          text-align: center;
+          background: $blue;
+        }
+        p {
+          font-weight: 300;
+          background-color: $grey;
+          padding: 1rem;
+          overflow: hidden;
+        }
+        .back {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          max-width: 150px;
+          height: 50px;
+          text-align: center;
+          background: $red;
+          margin-bottom: 4rem;
+          padding-right: 10px;
+          img {
+            transform: rotate(90deg);
+            margin-right: auto;
+            margin-left: 8px;
+          }
+        }
+      }
+    }
+  }
 }
