not found page created

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -39,10 +39,10 @@
     input {
       text-align: center;
       border-radius: 1px;
-      width: 144px;
-      height: 22px;
-      color: $grey;
-      background-color: rgba(255, 255, 255, 0.733);
+      width: auto;
+      height: auto;
+      color: $white;
+      background-color: $grey;
       border: none;
       outline: none;
       margin-right: 1rem;
