--- a/src/App.scss
+++ b/src/App.scss
@@ -9,20 +9,17 @@ body {
   }
 }
 
-body {
-  height: 100%;
-}
-
 * {
   color: white;
 }
 
-#root {
-  height: 100%;
-  background-image: url(./assets/images/background.jpg);
-  background-position: center;
-  background-repeat: repeat;
-  background-size: contain;
+body {
+  background: url('./assets/images/background.jpg') no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 @keyframes zoominoutsinglefeatured {
