--- a/src/pages/Start/Start.scss
+++ b/src/pages/Start/Start.scss
@@ -1,2 +1,25 @@
+@import '../../utilities/variables';
+
 .start {
+  height: 100vh;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .start__btn {
+    align-self: center;
+    max-width: fit-content;
+    text-decoration: none;
+    color: $white;
+    padding: 0.6rem 2.4rem;
+    text-align: center;
+    background: $blue;
+    font-size: 2rem;
+    font-weight: 300;
+    margin-top: 25vh;
+    img {
+      transform: rotate(-90deg);
+      margin-left: 1rem;
+    }
+  }
 }
