--- a/src/components/NotFound/NotFound.scss
+++ b/src/components/NotFound/NotFound.scss
@@ -5,20 +5,28 @@
   text-align: center;
   height: 100vh;
   margin-top: 2rem;
-  h1 {
-    font-style: italic;
-    font-weight: 400;
-    color: $white;
-    font-size: 1.6rem;
-    font-family: $default;
-    margin-bottom: 1rem;
+  .notFound__text {
+    h1 {
+      font-style: italic;
+      font-weight: 400;
+      color: $white;
+      font-size: 1.6rem;
+      font-family: $default;
+      margin-bottom: 1rem;
+    }
   }
-  img {
-    border-radius: 50%;
-    width: 100%;
+  .notFound__img {
+    img {
+      border-radius: 50%;
+      width: 100%;
+      max-width: 500px;
+    }
   }
-  small {
-    color: rgb(162, 212, 63);
-    font-style: italic;
+  .notFound__message {
+    h1 {
+      color: rgb(162, 212, 63);
+      font-style: italic;
+      font-weight: 300;
+    }
   }
 }
