--- a/src/pages/Apod/Apod.scss
+++ b/src/pages/Apod/Apod.scss
@@ -36,6 +36,20 @@ p,
       }
     }
     .row {
+      .apod__row__title {
+        h2 {
+          max-width: 680px;
+          margin: 2rem auto;
+          font-size: 1rem;
+          font-style: italic;
+          font-weight: 300;
+          background: rgb(20, 136, 20);
+          border-radius: 10px;
+          padding: 0.6rem;
+          text-align: center;
+          border: 1px solid $grey;
+        }
+      }
       .apod__date {
         z-index: 1;
         background-color: $blue;
