--- a/src/components/ShowcaseItems/ShowcaseItems.scss
+++ b/src/components/ShowcaseItems/ShowcaseItems.scss
@@ -3,4 +3,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  background: #111;
+  padding: 1rem 1.7rem;
+  border-radius: 10px;
 }
