--- a/src/pages/Start/Start.scss
+++ b/src/pages/Start/Start.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .start__btn {
+  .start__btn__span {
     align-self: center;
     max-width: fit-content;
     text-decoration: none;
