--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ body {
   position: fixed;
   z-index: -1000;
   height: 100%;
-  animation: zoominoutsinglefeatured 80s infinite;
+  animation: zoominoutsinglefeatured 30s infinite;
   width: 100%;
   background: url('./assets/images/background.jpg') no-repeat center center
     fixed;
@@ -36,6 +36,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   overflow: hidden;
+  opacity: 0.98;
   .app {
     z-index: 1000;
   }
@@ -43,12 +44,12 @@ body {
 
 @keyframes zoominoutsinglefeatured {
   0% {
-    transform: scale(1, 1);
+    transform: scale(1);
   }
   50% {
-    transform: scale(1.2, 1.2);
+    transform: scaleY(1.3);
   }
   100% {
-    transform: scale(1, 1);
+    transform: scale(1);
   }
 }
