--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -10,6 +10,11 @@
     object-fit: cover;
     border: 1px solid $grey;
     box-shadow: $dropShadow;
+    transition: ease-in-out 1s;
+    &:hover {
+      transform: scale(1.3);
+      z-index: 10;
+    }
   }
 }
 
